--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-treebeard": "^1.1.4"
   },
   "devDependencies": {
     "browserify": "^13.1.1",
